# tui-game

./: Cargo.toml
res/: enemies.ron  fights.ron  spells.ron
src/: main.rs
src/cli/: operation.rs  parser.rs
src/components/: app.rs  component.rs  fight_display.rs  mod.rs  player_stats_display.rs  spell_select.rs
src/game/: enemies.rs  mod.rs  spell.rs
src/model/: enemy.rs  event.rs  fight.rs  game_manager.rs  globals.rs  mod.rs  player.rs  spell.rs
