[package]
name = "tui-game"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
dialoguer = "0.11.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
nom = "8.0.0"
ratatui = "0.29.0"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
